--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -118,6 +118,7 @@
         android:layout_width="173dp"
         android:layout_height="54dp"
         android:layout_marginTop="48dp"
+        android:backgroundTint="#2398FF"
         android:text="VERIFY"
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout"
