--- a/app/src/main/res/layout/activity_phone_verify.xml
+++ b/app/src/main/res/layout/activity_phone_verify.xml
@@ -67,6 +67,7 @@
         android:layout_height="54dp"
         android:layout_marginTop="32dp"
         android:text="Send OTP"
+        android:backgroundTint="#2398FF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
