--- a/app/src/main/res/layout/recieve_msg.xml
+++ b/app/src/main/res/layout/recieve_msg.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -10,15 +11,24 @@
         android:layout_height="wrap_content"
         android:background="@drawable/receive_drawable"
         android:padding="15dp"
+        android:orientation="vertical"
         android:layout_margin="20dp">
+
         <TextView
+            android:id="@+id/receive__msg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Message Recieved"
-            android:textStyle="bold|normal"
+            android:textColor="@color/black"
             android:textSize="15dp"
-            android:id="@+id/receive__msg"
-            android:textColor="@color/black"/>
+            android:textStyle="bold|normal"
+            tools:ignore="TextSizeCheck" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="12dp"
+            android:id="@+id/recieve_time"
+            android:gravity="start"/>
     </LinearLayout>
 <!--    <ImageView-->
 <!--        android:layout_width="200dp"-->
