--- a/app/src/main/res/layout/send_message.xml
+++ b/app/src/main/res/layout/send_message.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:padding="15dp"
         android:layout_margin="20dp"
+        android:orientation="vertical"
         android:background="@drawable/send_drawable">
         <TextView
             android:layout_width="match_parent"
@@ -19,6 +20,12 @@
             android:textColor="@color/black"
             android:textSize="15dp"
             android:textStyle="bold|normal"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="12dp"
+            android:id="@+id/send_time"
+            android:gravity="end"/>
     </LinearLayout>
 <!--<ImageView-->
 <!--    android:layout_width="200dp"-->
